fixed missing border on chart

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -46,7 +46,6 @@ main
     flex-direction: row
     justify-content: center
     align-items: center
-    overflow: hidden
 
 a
     color: inherit
